# src/routes/tar.ts
@@ -8,11 +8,22 @@ const tar = express()
 tar.use(express.json())
 
 tar.get("/", async function (req: Request, res: Response) {
+    // #swagger.tags = ['Tar']
+    /* #swagger.responses[200] = {
+          description: 'Some description...',
+          schema: {
+              name: 'John Doe',
+              age: 29,
+              about: ''
+          }
+  } */
+    // #swagger.responses[500] = { description: 'Some description...' }
     const tar = await myDataSource.getRepository(Tar).find()
     res.json(tar)
 })
 
 tar.get("/:id", async function (req: Request, res: Response) {
+    // #swagger.tags = ['Tar']
     const results = await myDataSource.getRepository(Tar).findOneBy({
         id: +req.params.id,
     })
@@ -20,12 +31,14 @@ tar.get("/:id", async function (req: Request, res: Response) {
 })
 
 tar.post("/", async function (req: Request, res: Response) {
+    // #swagger.tags = ['Tar']
     const tar = await myDataSource.getRepository(Tar).create(req.body)
     const results = await myDataSource.getRepository(Tar).save(tar)
     return res.send(results)
 })
 
 tar.put("/:id", async function (req: Request, res: Response) {
+    // #swagger.tags = ['Tar']
     const tar = await myDataSource.getRepository(Tar).findOneBy({
         id: +req.params.id,
     })
@@ -35,6 +48,7 @@ tar.put("/:id", async function (req: Request, res: Response) {
 })
 
 tar.delete("/:id", async function (req: Request, res: Response) {
+    // #swagger.tags = ['Tar']
     const results = await myDataSource.getRepository(Tar).delete(req.params.id)
     return res.send(results)
 })
