# src/routes/taxa.ts
@@ -8,11 +8,22 @@ const taxa = express()
 taxa.use(express.json())
 
 taxa.get("/", async function (req: Request, res: Response) {
+    // #swagger.tags = ['Taxa']
+    /* #swagger.responses[200] = {
+          description: 'Some description...',
+          schema: {
+              name: 'John Doe',
+              age: 29,
+              about: ''
+          }
+  } */
+    // #swagger.responses[500] = { description: 'Some description...' }
     const taxa = await myDataSource.getRepository(Taxa).find()
     res.json(taxa)
 })
 
 taxa.get("/:id", async function (req: Request, res: Response) {
+    // #swagger.tags = ['Taxa']
     const results = await myDataSource.getRepository(Taxa).findOneBy({
         id: +req.params.id,
     })
@@ -20,12 +31,14 @@ taxa.get("/:id", async function (req: Request, res: Response) {
 })
 
 taxa.post("/", async function (req: Request, res: Response) {
+    // #swagger.tags = ['Taxa']
     const taxa = await myDataSource.getRepository(Taxa).create(req.body)
     const results = await myDataSource.getRepository(Taxa).save(taxa)
     return res.send(results)
 })
 
 taxa.put("/:id", async function (req: Request, res: Response) {
+    // #swagger.tags = ['Taxa']
     const taxa = await myDataSource.getRepository(Taxa).findOneBy({
         id: +req.params.id,
     })
@@ -35,6 +48,7 @@ taxa.put("/:id", async function (req: Request, res: Response) {
 })
 
 taxa.delete("/:id", async function (req: Request, res: Response) {
+    // #swagger.tags = ['Taxa']
     const results = await myDataSource.getRepository(Taxa).delete(req.params.id)
     return res.send(results)
 })
