# src/routes/valor.ts
@@ -8,11 +8,22 @@ const valor = express()
 valor.use(express.json())
 
 valor.get("/", async function (req: Request, res: Response) {
+    // #swagger.tags = ['Valor']
+    /* #swagger.responses[200] = {
+          description: 'Some description...',
+          schema: {
+              name: 'John Doe',
+              age: 29,
+              about: ''
+          }
+  } */
+    // #swagger.responses[500] = { description: 'Some description...' }
     const valor = await myDataSource.getRepository(Valor).find()
     res.json(valor)
 })
 
 valor.get("/:id", async function (req: Request, res: Response) {
+    // #swagger.tags = ['Valor']
     const results = await myDataSource.getRepository(Valor).findOneBy({
         id: +req.params.id,
     })
@@ -20,12 +31,14 @@ valor.get("/:id", async function (req: Request, res: Response) {
 })
 
 valor.post("/", async function (req: Request, res: Response) {
+    // #swagger.tags = ['Valor']
     const valor = await myDataSource.getRepository(Valor).create(req.body)
     const results = await myDataSource.getRepository(Valor).save(valor)
     return res.send(results)
 })
 
 valor.put("/:id", async function (req: Request, res: Response) {
+    // #swagger.tags = ['Valor']
     const valor = await myDataSource.getRepository(Valor).findOneBy({
         id: +req.params.id,
     })
@@ -35,6 +48,7 @@ valor.put("/:id", async function (req: Request, res: Response) {
 })
 
 valor.delete("/:id", async function (req: Request, res: Response) {
+    // #swagger.tags = ['Valor']
     const results = await myDataSource.getRepository(Valor).delete(req.params.id)
     return res.send(results)
 })
